--- a/mission/index.html
+++ b/mission/index.html
@@ -243,6 +243,9 @@
       </div>
     </div>
 
+    <!-- Kakao SDK -->
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js"></script>
+
     <!-- Scripts -->
     <script src="js/app.js"></script>
   </body>
