--- a/mission/index.html
+++ b/mission/index.html
@@ -70,39 +70,8 @@
 
     <!-- 메인 앱 -->
     <div id="app" class="app" style="display: none">
-      <!-- 헤더 -->
-      <header class="header">
-        <div class="header__top">
-          <p class="header__greeting">
-            안녕하세요, <span id="displayName">청년</span>님!
-          </p>
-          <button id="shareBtn" class="share-btn" aria-label="공유하기">
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <circle cx="18" cy="5" r="3"></circle>
-              <circle cx="6" cy="12" r="3"></circle>
-              <circle cx="18" cy="19" r="3"></circle>
-              <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
-              <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
-            </svg>
-          </button>
-        </div>
-        <div class="header__progress">
-          <span class="header__progress-text"
-            ><span id="completedCount">0</span>/<span id="totalCount">0</span>
-            완료</span
-          >
-          <div class="header__progress-bar">
-            <div id="progressFill" class="header__progress-fill"></div>
-          </div>
-        </div>
-      </header>
+      <!-- 헤더 (Header 컴포넌트로 렌더링) -->
+      <header id="header" class="header"></header>
 
       <!-- 미션 체크리스트 -->
       <main class="main">
@@ -179,22 +148,8 @@
 
       <!-- 간증문 섹션 -->
       <div id="testimony" class="section-page" style="display: none">
-        <div class="section-page__header">
-          <button class="back-btn" data-back="missions">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <polyline points="15 18 9 12 15 6"></polyline>
-            </svg>
-          </button>
-          <h2 class="section-page__title">간증문 작성</h2>
-        </div>
         <div class="section-page__content">
+          <h2 class="section-page__title">간증문 작성</h2>
           <p class="section-page__desc">수련회에서 느낀 은혜를 기록해주세요.</p>
           <form class="testimony-form">
             <textarea
@@ -219,22 +174,8 @@
 
       <!-- 설문 섹션 -->
       <div id="survey" class="section-page" style="display: none">
-        <div class="section-page__header">
-          <button class="back-btn" data-back="missions">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <polyline points="15 18 9 12 15 6"></polyline>
-            </svg>
-          </button>
-          <h2 class="section-page__title">설문조사</h2>
-        </div>
         <div class="section-page__content">
+          <h2 class="section-page__title">설문조사</h2>
           <p class="section-page__desc">수련회 장단점을 알려주세요.</p>
           <form id="surveyForm" class="survey-form">
             <!-- 설문 문항이 동적으로 추가됩니다 -->
@@ -243,10 +184,8 @@
       </div>
     </div>
 
-    <!-- Kakao SDK -->
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js"></script>
-
     <!-- Scripts -->
+    <script src="js/components/Header.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
