--- a/mission/index.html
+++ b/mission/index.html
@@ -8,13 +8,37 @@
       content="강남중앙침례교회 청년부 수련회 미션 체크리스트"
     />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="수련회 미션 체크리스트" />
+    <!-- Open Graph / 카카오톡 공유 -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="LOVE in Action - 수련회 미션 체크리스트"
+    />
     <meta
       property="og:description"
       content="2박 3일 수련회 미션을 완료하세요!"
     />
-    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://gbc-sys.github.io/gangcheong/mission/assets/images/seo.png"
+    />
+    <meta property="og:site_name" content="강남중앙침례교회 청년부" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="LOVE in Action - 수련회 미션 체크리스트"
+    />
+    <meta
+      name="twitter:description"
+      content="2박 3일 수련회 미션을 완료하세요!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://gbc-sys.github.io/gangcheong/mission/assets/images/seo.png"
+    />
 
     <title>강청 | 수련회 미션 체크리스트</title>
 
