--- a/mission/index.html
+++ b/mission/index.html
@@ -50,18 +50,7 @@
     <div id="intro" class="intro">
       <div class="intro__card">
         <div class="intro__icon">
-          <svg
-            width="48"
-            height="48"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
-            ></path>
-          </svg>
+          <img src="assets/images/logo.jpg" alt="로고" />
         </div>
         <h1 class="intro__title">2026 강청 겨울 수련회</h1>
         <p class="intro__subtitle">2박 3일 미션 체크리스트</p>
