--- a/mission/index.html
+++ b/mission/index.html
@@ -11,6 +11,10 @@
     <!-- Open Graph / 카카오톡 공유 -->
     <meta property="og:type" content="website" />
     <meta
+      property="og:url"
+      content="https://gbc-sys.github.io/gangcheong/mission/"
+    />
+    <meta
       property="og:title"
       content="LOVE in Action - 수련회 미션 체크리스트"
     />
@@ -22,6 +26,8 @@
       property="og:image"
       content="https://gbc-sys.github.io/gangcheong/mission/assets/images/seo.png"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="강남중앙침례교회 청년부" />
     <meta property="og:locale" content="ko_KR" />
 
