--- a/mission/index.html
+++ b/mission/index.html
@@ -106,6 +106,25 @@
         </div>
       </main>
 
+      <!-- 하단 고정 공유 버튼 -->
+      <button id="floatingShareBtn" class="floating-share-btn">
+        <svg
+          width="20"
+          height="20"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <circle cx="18" cy="5" r="3"></circle>
+          <circle cx="6" cy="12" r="3"></circle>
+          <circle cx="18" cy="19" r="3"></circle>
+          <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+          <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+        </svg>
+        <span>공유하기</span>
+      </button>
+
       <!-- 하단 네비게이션 -->
       <nav class="bottom-nav">
         <button
