--- a/mission/index.html
+++ b/mission/index.html
@@ -62,7 +62,7 @@
         <p class="intro__subtitle">2박 3일 미션 체크리스트</p>
 
         <div class="intro__form">
-          <label class="intro__label">이름을 입력해주세요</label>
+          <label class="intro__label">당신의 이름은? 🙋</label>
           <input
             type="text"
             id="userName"
