--- a/mission/index.html
+++ b/mission/index.html
@@ -224,6 +224,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script src="js/components/Header.js"></script>
     <script src="js/app.js"></script>
   </body>
