Feat: 리팩토링 수정

--- a/mission/index.html
+++ b/mission/index.html
@@ -107,6 +107,16 @@
           </button>
         </div>
 
+        <!-- 야간 안내 (00:00~07:00) -->
+        <div id="nightNotice" class="night-notice" style="display: none">
+          <div class="night-notice__icon">🌙</div>
+          <h2 class="night-notice__title">푹 쉬세요!</h2>
+          <p class="night-notice__desc">
+            오전 7시에 새로운 미션이 열립니다.<br />
+            내일도 힘내서 미션에 도전해주세요!
+          </p>
+        </div>
+
         <div id="missionContainer" class="mission-container">
           <!-- 미션 아이템들이 동적으로 추가됩니다 -->
         </div>
