--- a/mission/index.html
+++ b/mission/index.html
@@ -97,14 +97,24 @@
         <!-- Day 탭 -->
         <div class="day-tabs">
           <button class="day-tab day-tab--active" data-day="1">
-            DAY 1 <br />(2월 6일 금)
+            DAY 1 <br />(1월 16일 금)
           </button>
           <button class="day-tab" data-day="2">
-            <span>DAY 2 </span><br />(2월 7일 토)
+            <span>DAY 2 </span><br />(1월 17일 토)
           </button>
           <button class="day-tab" data-day="3">
-            <span>DAY 3 </span><br />(2월 8일 주일)
+            <span>DAY 3 </span><br />(1월 18일 주일)
           </button>
+        </div>
+
+        <!-- 시작 전 안내 -->
+        <div id="beforeStartNotice" class="night-notice" style="display: none">
+          <div class="night-notice__icon">🙏</div>
+          <h2 class="night-notice__title">아직 미션 시작 전이에요!</h2>
+          <p class="night-notice__desc">
+            수련회 첫째 날부터 미션이 시작됩니다.<br />
+            조금만 기다려주세요!
+          </p>
         </div>
 
         <!-- 야간 안내 (00:00~07:00) -->
@@ -142,7 +152,7 @@
           <span>공유하기</span>
         </button>
         <div class="floating-share-tooltip">
-          미션 3개 이상 완료해야 버튼이 활성화됩니다.
+          미션 절반 이상 완료해야 버튼이 활성화됩니다.
         </div>
       </div>
 
@@ -163,7 +173,13 @@
           class="bottom-nav__btn bottom-nav__btn--active"
           data-tab="missions"
         >
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke-width="2"
+          >
             <path d="M9 11l3 3L22 4"></path>
             <path
               d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
@@ -172,7 +188,13 @@
           <span>미션</span>
         </button>
         <button class="bottom-nav__btn" data-tab="testimony">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke-width="2"
+          >
             <path
               d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
             ></path>
@@ -183,7 +205,13 @@
           <span>간증문</span>
         </button>
         <button class="bottom-nav__btn" data-tab="survey">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke-width="2"
+          >
             <path
               d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
             ></path>
