--- a/mission/index.html
+++ b/mission/index.html
@@ -120,7 +120,6 @@
             <!-- 도장판 카드들이 동적으로 추가됩니다 -->
           </div>
         </div>
-
       </main>
 
       <!-- 하단 고정 공유 버튼 -->
@@ -157,7 +156,25 @@
       <div class="modal__content">
         <div class="modal__header">
           <h3 class="modal__title" id="modalTitle">미션 선택</h3>
-          <button class="modal__close" id="modalClose">&times;</button>
+          <button class="modal__close" id="modalClose">
+            <?xml version="1.0" encoding="UTF-8"?><svg
+              width="24px"
+              height="24px"
+              stroke-width="1.5"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              color="#ffffff"
+            >
+              <path
+                d="M6.75827 17.2426L12.0009 12M17.2435 6.75736L12.0009 12M12.0009 12L6.75827 6.75736M12.0009 12L17.2435 17.2426"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </svg>
+          </button>
         </div>
         <div class="modal__body">
           <div class="modal__target">
