--- a/mission/index.html
+++ b/mission/index.html
@@ -47,6 +47,23 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- 스플래시 화면 -->
+    <div id="splash" class="splash">
+      <div class="splash__content">
+        <div class="splash__logo">
+          <img src="assets/images/logo.jpg" alt="로고" />
+        </div>
+        <div class="splash__text">
+          <h1 class="splash__title">LOVE in Action</h1>
+          <p class="splash__subtitle">사랑의 언어 도장판</p>
+        </div>
+        <div class="splash__loader">
+          <div class="splash__loader-bar"></div>
+        </div>
+      </div>
+      <p class="splash__footer">강남중앙침례교회 청년부</p>
+    </div>
+
     <!-- 인트로 화면 -->
     <div id="intro" class="intro">
       <div class="intro__card">
