--- a/mission/index.html
+++ b/mission/index.html
@@ -219,27 +219,43 @@
 
     <!-- Scripts -->
     <script>
-      // 로컬스토리지 버전 관리 - 버전 변경 시 특정 데이터 초기화
+      // 로컬스토리지 스키마 버전 관리
       (function () {
-        const STORAGE_VERSION = "1";
-        const savedVersion = localStorage.getItem("storage_version");
+        const SCHEMA_VERSION = 1;
+        const SCHEMA_KEY = "app_schema_version";
 
-        if (savedVersion !== STORAGE_VERSION) {
-          // 초기화할 키 목록
-          const keysToRemove = [
-            "stamp_data",
-            "last_share_date",
-            "userName",
-            "last_confetti_day1",
-            "last_confetti_day2",
-          ];
+        // 버전별 마이그레이션 정의
+        // - keysToRemove: 특정 키만 삭제
+        // - clearAll: 전체 삭제
+        const migrations = {
+          1: {
+            keysToRemove: ["stamp_data", "last_share_date", "userName"],
+          },
+          2: {
+            keysToRemove: ["last_confetti_day1", "last_confetti_day2"],
+          },
+          // 예시: 전체 삭제가 필요한 경우
+          99: { clearAll: true },
+        };
 
-          keysToRemove.forEach((key) => localStorage.removeItem(key));
-          localStorage.setItem("storage_version", STORAGE_VERSION);
+        const savedVersion = parseInt(localStorage.getItem(SCHEMA_KEY)) || 0;
+
+        if (savedVersion < SCHEMA_VERSION) {
+          // 저장된 버전 이후의 모든 마이그레이션 실행
+          for (let v = savedVersion + 1; v <= SCHEMA_VERSION; v++) {
+            const migration = migrations[v];
+            if (migration?.clearAll) {
+              localStorage.clear();
+            } else if (migration?.keysToRemove) {
+              migration.keysToRemove.forEach((key) =>
+                localStorage.removeItem(key),
+              );
+            }
+          }
+
+          localStorage.setItem(SCHEMA_KEY, SCHEMA_VERSION);
           console.log(
-            "로컬스토리지 데이터가 초기화되었습니다. (v" +
-              STORAGE_VERSION +
-              ")",
+            `[Storage] 마이그레이션 완료: v${savedVersion} → v${SCHEMA_VERSION}`,
           );
         }
       })();
