--- a/mission/index.html
+++ b/mission/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta
@@ -136,6 +139,13 @@
             각 언어별로 대상자를 정하고, 미션을 선택한 뒤 완료하면 도장을
             받아요.
           </p>
+          <a
+            href="https://smore.im/quiz/PUE0jtfbsZ"
+            target="_blank"
+            class="stamp-section__quiz-link"
+          >
+            나의 사랑의 언어 테스트하기
+          </a>
           <div id="stampContainer" class="stamp-container">
             <!-- 도장판 카드들이 동적으로 추가됩니다 -->
           </div>
