--- a/mission/index.html
+++ b/mission/index.html
@@ -294,6 +294,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script src="js/utils/url.js"></script>
+    <script src="js/utils/date-checker.js"></script>
     <script src="js/components/Header.js"></script>
     <script src="js/components/bottom-nav.js"></script>
     <script src="js/app.js"></script>
