--- a/mission/index.html
+++ b/mission/index.html
@@ -123,12 +123,13 @@
     <script>
       // 로컬스토리지 스키마 버전 관리
       (function () {
-        const SCHEMA_VERSION = 1;
+        const SCHEMA_VERSION = 99;
         const SCHEMA_KEY = "app_schema_version";
 
         const migrations = {
           1: {
             keysToRemove: [
+              "app_schema_version",
               "stamp_data",
               "last_share_date",
               "userName",
