Feat: 네비 탭 순서 변경

--- a/mission/index.html
+++ b/mission/index.html
@@ -141,6 +141,7 @@
           },
           99: { clearAll: true },
           100: { clearAll: true },
+          101: { clearAll: true },
         };
 
         const savedVersion = parseInt(localStorage.getItem(SCHEMA_KEY)) || 0;
