--- a/mission/index.html
+++ b/mission/index.html
@@ -170,5 +170,6 @@
     </script>
     <script src="js/utils/url.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/components/visitor-counter.js"></script>
   </body>
 </html>
